# Masterthesis

./: CMakeLists.txt  README.md
main/: Bd2JpsiKSVariablesGrimReaper.cpp  CMakeLists.txt  WrongPVReducer.cpp
notebooks/: .gitignore
notebooks/decaytime_studies/: acceptance_JpsiKS_data.ipynb  acceptance_JpsiKS_mc.ipynb  acceptance_per_event_res_JpsiKS.ipynb  average_resolution_mc.ipynb  per_event_res_mc.ipynb
notebooks/decaytime_studies/.ipynb_checkpoints/: acceptance_per_event_res_JpsiKS-checkpoint.ipynb  average_resolution_mc-checkpoint.ipynb  per_event_res_mc-checkpoint.ipynb
notebooks/decaytime_studies/acceptance/: acceptance_JpsiKS_data.ipynb  acceptance_JpsiKS_data_and_mc.ipynb  acceptance_JpsiKS_mc.ipynb  acceptance_JpsiKS_mc_randomPV.ipynb
notebooks/decaytime_studies/decaytime_fit/: blind_testing.ipynb  decaytime_JpsiKS_data.ipynb  decaytime_JpsiKS_data_DecRateCoeffs.ipynb  decaytime_JpsiKS_mc.ipynb  decaytime_JpsiKS_mc_DecRateCoeffs.ipynb
notebooks/decaytime_studies/resolution/: average_resolution_mc.ipynb  per-event-resolution-bestpv_complete_mc.ipynb  per_event_res_mc.ipynb  per_event_res_mc_bdt_approach.ipynb  per_event_res_mc_bestPV.ipynb
notebooks/decaytime_studies/wrong_pv/: Bd2JpsiKS_bdt_vs_minip.ipynb  Bd2JpsiKs_BDT_wrongPV_mc.ipynb  Bd2JpsiKs_bdt_cuttuning_MinIPCHIanyPV_Scan.ipynb  Bd2JpsiKs_bdt_cuttuning_mc_wrongPV.ipynb  Bd2JpsiKs_bias_correlations.ipynb  Bd2JpsiKs_scan_dilution_mc.ipynb  Bd2JpsiKs_scandilution_bdtapproach_mc.ipynb  Bd2JpsiKs_scandilution_randomsel_mc.ipynb  Bd2JpsiKs_wrongPV_bdt_cuttuning.ipynb  Bd2JpsiKs_wrongPV_bdt_scan.ipynb  Bd2JpsiKs_wrongpv_minipchi2_scan.ipynb
notebooks/mass_fit/: data_2015_jpsiks_sweights.ipynb  data_2016_jpsiks_sweights.ipynb  mass_check_2015_2016.ipynb  massfit_2016_jpsiks.ipynb  massfit_data_2015-2016__ipatia.ipynb  massfit_data_2015-2016__selected.ipynb  massfit_mc_2016_ipatia_parameters.ipynb  massfit_sw_data_2015_ipatia.ipynb
notebooks/mass_fit/.ipynb_checkpoints/: data_2015_jpsiks_sweights-checkpoint.ipynb  data_2016_jpsiks_sweights-checkpoint.ipynb  mass_check_2015_2016-checkpoint.ipynb  massfit_2015_2016_merged-checkpoint.ipynb  massfit_2016_jpsiks-checkpoint.ipynb  massfit_data_2015-2016__ipatia-checkpoint.ipynb
notebooks/mass_fit/deliver/: Bd2JpsiKS_massfit.ipynb  Bd2JpsiKS_massfit_beforeSelection.ipynb  Bd2JpsiKS_massfit_mc.ipynb  Bd2JpsiKS_massfit_mc_beforeSelection.ipynb
notebooks/mass_fit/deliver/.ipynb_checkpoints/: Bd2JpsiKS_massfit-checkpoint.ipynb
notebooks/mass_fit/develop/: massfit_2015_2016_merged.ipynb  massfit_2015_jpsiks.ipynb  massfit_selected_data.ipynb  massfit_sw_data_2016_ipatia.ipynb
notebooks/mass_fit/develop/.ipynb_checkpoints/: massfit_data_2015-2016__selected-checkpoint.ipynb
notebooks/preselection/: Bd2JpsiKS_data_2015_sweights_check.ipynb  Bd2JpsiKS_mc_2015_triggerline_efficiency.ipynb
notebooks/preselection/.ipynb_checkpoints/: Bd2JpsiKS_2015_compare_variables-checkpoint.ipynb  Bd2JpsiKS_data_2015_sweights_check-checkpoint.ipynb  Bd2JpsiKS_mc_2015_triggerline_efficiency-checkpoint.ipynb
notebooks/run1/: Bd2JpsiKS_cut_based_selection.ipynb
notebooks/selection/: Bd2JpsiKS_check_2015_2016.ipynb  Bd2JpsiKs_BDT_Selection.ipynb  Bd2JpsiKs_BDT_Selection_sw.ipynb  Bd2JpsiKs_BDT_wrongPV_mc.ipynb  Bd2JpsiKs_bdt_cuttuning.ipynb  Bd2JpsiKs_bdt_cuttuning_MinIPCHIanyPV_Scan.ipynb  Bd2JpsiKst_check_2015_2016.ipynb  bd2jpsiks_bdt_cuttuning.ipynb  bd2jpsiks_bdt_cuttuning_MinIPCHIanyPV_Scan.ipynb  bd2jpsiks_bdt_cuttuning_mc_wrongPV.ipynb  bd2jpsiks_preselection_wrongPV_20170421.ipynb  check_tau.ipynb  grim.sh  source.sh
notebooks/selection/.ipynb_checkpoints/: Bd2JpsiKs_BDT_Selection-checkpoint.ipynb  Bd2JpsiKst_check_2015_2016-checkpoint.ipynb  bd2jpsiks_bdt_cuttuning-checkpoint.ipynb  bdjpsiks_fom-checkpoint.ipynb
notebooks/tuple_bench/: Bd2JpsiKS_MC_tuple_configuration.ipynb  Bd2JpsiKS_tuple_configuration.ipynb
python/massfit/jpsimumuks/: sweights.py
python/selection/: bdjpsimumuks_bdt.py
